Agregado del borrador del estilo2. Modificacion en el estilo1 para poder modificar el color del boton del footer.

--- a/Proyecto1/css/estilo1.css
+++ b/Proyecto1/css/estilo1.css
@@ -18,6 +18,12 @@ body {
     color: #61380B;
 }
 
+.btn{
+	background-color: white;
+	color: black;	
+	
+}
+
 #menu{
 	background-color: white;
 	border-radius: 10px;
