--- a/Proyecto1/css/estilo2.css
+++ b/Proyecto1/css/estilo2.css
@@ -1,33 +1,43 @@
 body {
-    background-color: #FE9A2E;
+    background-color: black;
 }
 
 #header {
-	background-color: blue;
+	background-color: grey;
 	border-radius: 10px;
 	padding-top: 10px;
 	padding-bottom: 20px;
-    color: #61380B;
+    color: white;
     text-align: center;
     margin: 20px;
 }
 
 #footer {
-	background-color: blue;
+	background-color: grey;
 	padding: 10px;
-    color: #61380B;
+    color: black;
+}
+
+.btn{
+	background-color: black;
+	color: white;	
+	
 }
 
 #menu{
-	background-color: white;
+	background-color: #BEBEBE;
 	border-radius: 10px;
 	padding-top: 10px;
 	padding-bottom: 20px;
-    color: #61380B;
+    color: black;
     font: Verdana;
-    text-align: center;
+	font-size: large;
+    text-align: left;
     margin: 20px;
 }
+
+
+
 
 .nav-tabs.centered > li, .nav-pills.centered > li {
     float:none;
