Agregado de textBox que muestra la suma actual. Falta decidir si va a haber checkboxs ya slecionados para ver si arranca en 0 o en la suma por defecto. Por ahora esta como si no hubiera chequeados.

--- a/Proyecto1/css/estilo1.css
+++ b/Proyecto1/css/estilo1.css
@@ -46,6 +46,11 @@ body {
     text-align:center;
 }
 
+.textBox{
+	width: 100px;
+	height: 30px;
+}
+
 canvas {
 	overflow: auto;
     margin: 50px;
