--- a/Proyecto1/css/estilo2.css
+++ b/Proyecto1/css/estilo2.css
@@ -76,6 +76,12 @@ background-color: white;
     text-align:center;
 }
 
+.textBox{
+	width: 100px;
+	height: 30px;
+}
+
+
 canvas {
 	overflow: auto;
     margin: 50px;
