--- a/Proyecto1/css/estilo2.css
+++ b/Proyecto1/css/estilo2.css
@@ -2,7 +2,7 @@ body {
     background-color: black;
 }
 
-#header {
+header {
 	background-color: grey;
 	padding-top: 25px;
 	padding-bottom: 25px;
