--- a/Proyecto1/css/estilo1.css
+++ b/Proyecto1/css/estilo1.css
@@ -5,53 +5,73 @@ body {
 header {
 	background-color: white;
 	border-radius: 10px;
-	padding-top: 10px;
-	padding-bottom: 20px;
+	
+	border-style: solid;
+    border-width: 5px;
+    border-color: #880000;
+
+	padding-top: 5px;
+	padding-bottom: 10px;
+
     color: #61380B;
     text-align: center;
     margin: 20px;
 }
 
-#footer {
+footer {
 	background-color: #FE7500;
 	padding: 10px;
+
+	border-style: solid;
+	border-width: 5px 0 0 0;
+	border-color: #880000;
+
     color: #61380B;
 }
 
-.btn{
-	background-color: white;
-	color: black;	
-	
+p {
+	margin-left: 30px;
 }
 
-#menu{
+.btn {
+	background-color: white;
+	color: black;
+}
+
+#menu {
 	background-color: white;
 	border-radius: 10px;
 	padding-top: 10px;
 	padding-bottom: 20px;
     color: #61380B;
     font: Verdana;
-    text-align: center;
     margin: 20px;
 }
 
-.nav-tabs.centered > li, .nav-pills.centered > li {
-    float:center;
-    display:inline-block;
-    *display:inline; /* ie7 fix */
-     zoom:1; /* hasLayout ie7 trigger */
+.navUnit {
+	padding-left: 30px;
 }
 
-.nav-tabs.centered, .nav-pills.centered {
+.nav-tabs > li {
+    float:none;
+    display:inline-block;
+    zoom:1;
+}
+
+.nav-tabs {
     text-align:center;
 }
 
-.textBox{
+.textBox {
 	width: 100px;
 	height: 30px;
+	text-indent: 5px;
+	margin-left: 10px;
 }
 
 canvas {
 	overflow: auto;
-    margin: 50px;
+	float: center;
+    margin-left: 40px;
+    margin-top: 20px;
 }
