--- a/Proyecto1/css/estilo2.css
+++ b/Proyecto1/css/estilo2.css
@@ -11,7 +11,7 @@ header {
    	background-image: url("../source/blackwood1.png");
 }
 
-#footer {
+footer {
 	background-color: grey;
 	padding-top: 30px;
 	padding-bottom: 30px;
@@ -45,34 +45,26 @@ header {
 }
 
 
-.nav-tabs.centered > li{
-    float:none;
-    display:inline-block;
-    *display:inline; /* ie7 fix */
-     zoom:1; /* hasLayout ie7 trigger */
-}
-
 .nav-pills.centered > li{
     float:none;
     display:inline-block;
     *display:inline; /* ie7 fix */
-     zoom:1; /* hasLayout ie7 trigger */
-	 background: white;
-	 margin: 2px;
+    zoom:1; /* hasLayout ie7 trigger */
+	background: white;
+	margin: 2px;
 }
 
 .nav-pills.centered > li > a:hover, .nav-pills.centered > li > a:focus {
-color: #000;  /*Sets the text hover color on navbar*/
+	color: #000;  /*Sets the text hover color on navbar*/
 }
 
-.nav-pills.centered > .active > a, .nav-pills.centered > .active >   
- a:hover, .nav-pills.centered > .active > a:focus {
-color: black; /*BACKGROUND color for active*/
-background-color: white;
+.nav-pills.centered > .active > a, .nav-pills.centered > .active > 
+  a:hover, .nav-pills.centered > .active > a:focus {
+	color: black; /*BACKGROUND color for active*/
+	background-color: white;
 }
 
-
-.nav-tabs.centered, .nav-pills.centered {
+.nav-pills.centered {
     text-align:center;
 }
 
@@ -80,7 +72,6 @@ background-color: white;
 	width: 100px;
 	height: 30px;
 }
-
 
 canvas {
 	overflow: auto;
