--- a/Proyecto1/css/estilo2.css
+++ b/Proyecto1/css/estilo2.css
@@ -11,6 +11,12 @@ header {
    	background-image: url("../source/blackwood1.png");
 }
 
+h1{
+	font-family: "Times New Roman";
+	font-style: italic;
+	font-size: 40px;
+}
+
 footer {
 	background-color: grey;
 	padding-top: 30px;
@@ -18,6 +24,12 @@ footer {
 	color: black;
 	background-image: url("../source/blackwood1.png");
 	
+}
+
+p {
+	margin-left: 512px;
+	font-size: 25px;
+	font-family: "Times New Roman";
 }
 
 .btn{
@@ -39,7 +51,7 @@ footer {
 	padding-top: 10px;
     color: black;
     font: Verdana;
-	font-size: large;
+	font-size: medium;
     text-align: left;
     margin: 10px;
 }
@@ -71,6 +83,9 @@ footer {
 .textBox{
 	width: 100px;
 	height: 30px;
+	text-align: center;
+	border-width: 3px;
+	border-color: black;
 }
 
 canvas {
