--- a/Proyecto1/css/estilo1.css
+++ b/Proyecto1/css/estilo1.css
@@ -11,7 +11,7 @@ header {
     border-color: #880000;
 
 	padding-top: 5px;
-	padding-bottom: 10px;
+	padding-bottom: 15px;
 
     color: #61380B;
     text-align: center;
@@ -74,4 +74,8 @@ canvas {
 	float: center;
     margin-left: 40px;
     margin-top: 20px;
+
+    border: 5px solid #DDDDDD;
+    padding: 5px;
+    background: #FFFFFF;
 }
